compiler/typ/tests/fixtures/diagnostics/0632_functor_generative_value_mismatch_08.ml.infer.expected
File "0632_functor_generative_value_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0632_functor_generative_value_mismatch_08 is not a valid module name.

File "0632_functor_generative_value_mismatch_08.ml", line 9, characters 20-33:
9 | let _ : B_theta.t = A_theta.value
                        ^^^^^^^^^^^^^
Error: The value A_theta.value has type A_theta.t
       but an expression was expected of type B_theta.t
